--- a/payroll/printerdeptdet.page
+++ b/payroll/printerdeptdet.page
@@ -1,7 +1,7 @@
 page printerdept
 
 	 embed onload="move_caret('one','xdesc')"
-     caption "<span class=bl>Awards Information for Employee <a href=/da/"+#servlet+"?page=praward&command=Show&xemp="+xemp+">" +xemp+ "</a></span>"+" ("+globals(xname)+")"
+     caption "<span class=bl>Inter Departmental Working Information for Employee  <a href=/da/"+#servlet+"?page=printerdept&command=Show&xemp="+xemp+">" +xemp+ "</a></span>"+" ("+globals(xname)+")"
      sidebar list one
      sections form one, script myscript
 
