--- a/payroll/printerdeptdet.page
+++ b/payroll/printerdeptdet.page
@@ -19,9 +19,7 @@ page printerdept
             caption Reason
         end field
         
-     end list
-
-     form one
+     end list        form one
         //caption "<font color=black size=4>Furniture Allocation for <font color=white></p>"+globals(xname)+"</font></font>"
         table printerdeptdet
         order xrow,xemp
@@ -29,7 +27,8 @@ page printerdept
         layout 1
         objects Add, Clear,Show,  Update,  Top, Delete,Previous, Next, Bottom,Return,~
                 xrow attrib(row 0 1),xdate,xdoctype display(hide),xqty display(hide),zemail display(hide),xemail display(hide),~
-                xjobdesc,xdeptassgn,xassignee,xtimespent,xunitsprod,xrem,xremarks
+                xjobdesc attrib(local),xdeptassgn attrib(local),xassignee attrib(local),xtimespent attrib(local),xunitsprod attrib(local),~
+                xrem,xremarks
 
         field xqtyspc
             caption Number of Copy
