--- a/payroll/printerdept.page
+++ b/payroll/printerdept.page
@@ -1,7 +1,7 @@
 page printerdept
 
 	 embed onload="move_caret('one','xemp')"
-     caption "Awards/Rewards Information"
+     caption "Inter Departmental Working Module"
      //sidebar text one
      sections form one, list one, script myscript, text top
 
