--- a/payroll/printerdeptdet.page
+++ b/payroll/printerdeptdet.page
@@ -1,7 +1,7 @@
-page printerdept
+page prawarddet
 
 	 embed onload="move_caret('one','xdesc')"
-     caption "<span class=bl>Inter Department Information for Employee <a href=/da/"+#servlet+"?page=printerdept&command=Show&xemp="+xemp+">" +xemp+ "</a></span>"+" ("+globals(xname)+")"
+     caption "<span class=bl>Awards Information for Employee <a href=/da/"+#servlet+"?page=praward&command=Show&xemp="+xemp+">" +xemp+ "</a></span>"+" ("+globals(xname)+")"
      sidebar list one
      sections form one, script myscript
 
@@ -23,13 +23,13 @@ page printerdept
 
      form one
         //caption "<font color=black size=4>Furniture Allocation for <font color=white></p>"+globals(xname)+"</font></font>"
-        table printerdeptdet
+        table prawarddet
         order xrow,xemp
         fixed xemp
         layout 1
         objects Add, Clear,Show,  Update,  Top, Delete,Previous, Next, Bottom,Return,~
                 xrow attrib(row 0 1),xdate,xdoctype display(hide),xqty display(hide),zemail display(hide),xemail display(hide),~
-                xjobdesc,xdeptassgn,xassignee,assignee_name,xtimespent,xunitsprod,xrem,xremarks
+                xrem,xremarks
 
         field xqtyspc
             caption Number of Copy
@@ -65,24 +65,6 @@ page printerdept
           end event
         end field
 
-        field xassignee
-            caption Assignee
-            pick list xemp
-            event after
-                set globals(xassignee)=xassignee
-                class prmst(getname{xassignee})
-            end event
-        end field
-
-        field assignee_name
-            attrib local
-            caption Name
-            display const
-            event after
-                set assignee_name=prmst.xname("xemp='"+xassignee+"'")
-            end event
-        end field
-
         embed onsubmit="submitit(this)"
 
         field Return
@@ -104,7 +86,7 @@ page printerdept
         {
           if (details=="back")
           {
-            form.page.value = "printerdept"
+            form.page.value = "praward"
             form.searchbutton.value= "Find xemp=?"
           }
         }
